@@ -160,6 +160,37 @@
   </refsection>
 
   <refsection>
+    <title>Exit Status</title>
+
+    <para><command>zbarcam</command> returns an exit code to indicate the
+    status of the program execution. Current exit codes are:</para>
+
+    <variablelist>
+      <varlistentry>
+        <term>0</term>
+        <listitem>
+          <para>Successful program completion.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>1</term>
+        <listitem>
+          <para>An error occurred.  This includes bad arguments and I/O
+          errors.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>2</term>
+        <listitem>
+          <para>A fatal error occurred.</para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+  </refsection>
+
+  <refsection>
     <title>See Also</title>
     <para><xref linkend="zbarimg"/></para>
     <para><link xlink:href="http://zbar.sf.net/"/></para>
